@@ -1,3 +1,9 @@
+2003-11-19  Carl Worth  <cworth@isi.edu>
+
+	* xcompmgr.c: Eliminate several compiler warnings: missing
+	includes, static functions, unused variables.  Remove confusing
+	informational messages with the word "error" in them.
+
 2003-11-14  Keith Packard  <keithp@keithp.com>
 
 	* xcompmgr.c: (main):
